refac: trip/info/{tripId} GET 수정